--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "name": "lyrics-helper-backend",
+  "version": "0.0.2",
+  "description": "lyrics helper backend",
+  "author": "crisin",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "npx prisma generate && npx prisma migrate deploy && npm run build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
