fix docker setup

--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,33 +1,27 @@
-# Use Node.js 24 as base image
-FROM node:24-alpine
+# ─── Build stage ──────────────────────────────────────────────────────────────
+FROM node:24-alpine AS builder
 
-# Set working directory
-WORKDIR /app/frontend
+WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
+RUN npm ci
 
-# Install dependencies
-RUN npm i
-
-# Copy source code
 COPY . .
 
-# Build the application
+# VITE_API_URL is baked into the JS bundle at build time.
+# Set this as an environment variable in Railway for the frontend service.
+ARG VITE_API_URL=http://localhost:3001
+ENV VITE_API_URL=$VITE_API_URL
+
 RUN npm run build
 
-# Use nginx as production server
+# ─── Production stage ─────────────────────────────────────────────────────────
 FROM nginx:alpine
 
-# Copy built files to nginx
-COPY --from=0 /app/frontend/dist /usr/share/nginx/html
-
-# Copy nginx config
+COPY --from=builder /app/dist /usr/share/nginx/html
 COPY ./nginx.conf /etc/nginx/nginx.conf
 
-# Expose port
 EXPOSE 80
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost/health || exit 1
