--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,48 +1,38 @@
-# Multi-stage build Dockerfile
+# ─── Build stage ──────────────────────────────────────────────────────────────
 FROM node:24-alpine AS builder
-
-RUN apk add --no-cache postgresql-client
 
 WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
+RUN npm ci
 
-# Install all dependencies (including dev dependencies for prisma generation)
-RUN npm install
-
-# Copy source code
 COPY . .
 
-# Generate Prisma client
-RUN npx prisma generate
-
-# Build the application
+# Generates Prisma client AND compiles TypeScript
 RUN npm run build
 
-# Production stage
+# ─── Production stage ─────────────────────────────────────────────────────────
 FROM node:24-alpine AS production
 
 WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
 
-# Install production dependencies only
-RUN npm ci --only=production
+# Install production deps, then add the Prisma CLI (needed for migrate deploy at startup)
+RUN npm ci --only=production && npm install prisma
 
-# Copy built application from builder stage
+# Copy compiled app
 COPY --from=builder /app/dist ./dist
+
+# Copy Prisma artifacts
 COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 COPY --from=builder /app/prisma ./prisma
 
-# Create non-root user for security
-RUN addgroup -g 1001 -S nodejs
-RUN adduser -S nextjs -u 1001
-
-USER nextjs
+# Non-root user
+RUN addgroup -g 1001 -S nodejs && adduser -S nestjs -u 1001
+USER nestjs
 
 EXPOSE 3001
 
-# Start the application
-CMD ["npm", "run", "start:prod"]
+# Run pending migrations, then start the server
+CMD ["sh", "-c", "npx prisma migrate deploy && node dist/src/main.js"]
