--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -29,9 +29,12 @@ RUN npm run build
 FROM nginx:alpine
 
 COPY --from=builder /app/dist /usr/share/nginx/html
-COPY frontend/nginx.conf /etc/nginx/nginx.conf
+
+# nginx:alpine's entrypoint runs envsubst on *.conf.template files in this
+# directory before starting nginx, substituting ${PORT} with Railway's PORT.
+COPY frontend/nginx.default.conf.template /etc/nginx/templates/default.conf.template
 
 EXPOSE 80
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost/health || exit 1
+  CMD wget -q --spider http://localhost:${PORT:-80}/health || exit 1
