--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -30,6 +30,7 @@ RUN npm ci --only=production && npm install prisma
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 COPY --from=builder /app/prisma ./prisma
+COPY --from=builder /app/prisma.config.ts ./prisma.config.ts
 
 EXPOSE 3001
 
