--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -37,4 +37,4 @@ EXPOSE 3001
 # timeout 60: kill migrate if DB isn't reachable within 60s (prevents infinite hang)
 # ;  (not &&): always start the server — if migrations fail Railway's restart
 #    policy retries the container, which is safer than never starting at all
-CMD ["sh", "-c", "timeout 60 node_modules/.bin/prisma migrate deploy; exec node dist/src/main.js"]
+CMD ["sh", "-c", "timeout 60 node_modules/.bin/prisma migrate deploy; timeout 30 node dist/src/database/seed.js; exec node dist/src/main.js"]
